(4.2.7p35) 2010/06/12 Released by Harlan Stenn <stenn@ntp.org>
* Rewrite of multiprecision macros in 'ntp_fp.h' from J. Perlinger
  <perlinger@ntp.org>
* [Bug 715] from 4.2.6p2-RC6: libisc Linux IPv6 interface iteration
  drops multicast flags.
(4.2.7p34) 2010/06/05 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1570] serial clock drivers get outdated input from kernel tty
  line buffer after startup
(4.2.7p33) 2010/06/04 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1561] from 4.2.6p2-RC5: ntpq, ntpdc "passwd" prompts for MD5
  password w/SHA1.
* [Bug 1565] from 4.2.6p2-RC5: sntp/crypto.c compile fails on MacOS over
  vsnprintf().
* from 4.2.6p2-RC5: Windows port: do not exit in
  ntp_timestamp_from_counter() without first logging the reason.
(4.2.7p32) 2010/05/19 Released by Harlan Stenn <stenn@ntp.org>
* Copyright file cleanup from Dave Mills.
* [Bug 1555] from 4.2.6p2-RC4: sntp illegal C (mixed code and
  declarations).
* [Bug 1558] pool prototype associations have 0.0.0.0 for remote addr.
* configure.ac: add --disable-autokey, #define AUTOKEY to enable future
  support for building without Autokey, but with OpenSSL for its digest
  algorithms (hash functions).  Code must be modified to use #ifdef
  AUTOKEY instead of #ifdef OPENSSL where appropriate to complete this.
* include/ntp_crypto.h: make assumption AUTOKEY implies OPENSSL explicit.
(4.2.7p31) 2010/05/11 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1325] from 4.2.6p2-RC3: unreachable code sntp recv_bcst_data().
* [Bug 1459] from 4.2.6p2-RC3: sntp MD5 authentication does not work
  with ntpd.
* [Bug 1552] from 4.2.6p2-RC3: update and complete broadcast and crypto
  features in sntp.
* [Bug 1553] from 4.2.6p2-RC3: sntp/configure.ac OpenSSL support.
* from 4.2.6p2-RC3: Escape unprintable characters in a refid in ntpq -p
  billboard.
* from 4.2.6p2-RC3: Simplify hash client code by providing OpenSSL
  EVP_*() API when built without OpenSSL.  (already in 4.2.7)